LPS-108249 Remove dead css and fix vertical align on infobar

--- a/modules/apps/blogs/blogs-web/src/main/resources/META-INF/resources/blogs/css/main.scss
+++ b/modules/apps/blogs/blogs-web/src/main/resources/META-INF/resources/blogs/css/main.scss
@@ -250,11 +250,9 @@
 		}
 	}
 
-	.info-bar-container.affix + .entry-body {
-		margin-top: 47px;
-
+	.info-bar-center {
 		@include media-breakpoint-up(sm) {
-			margin-top: 59px;
+			margin-top: 16px;
 		}
 	}
 
